fix(movies and main page): fix info about me and fix search movies
also change scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,9 @@
 @import url(./vendor/normalize.css);
 @import url(./vendor/fonts.css);
+@import './styles/mixins.scss';
 
 html {
+  @include scrollbar();
   scroll-behavior: smooth;
 }
 
